snapshots/syntax/statements/control_flow/mod/resume_preserves_whitespace.snap
---
source: src/syntax/statements/control_flow/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: ResumeStatement
      children:
        - kind: ResumeKeyword
          text: Resume
        - kind: Whitespace
          text: "    "
        - kind: NextKeyword
          text: Next
        - kind: Whitespace
          text: "    "
        - kind: Newline
          text: "\n"
